# ColeEngine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.obsidian/: app.json  graph.json  workspace.json
CMAKE/: FindSDL2Mixer.cmake
docs/: Backlog.md  Brainstorm.md  ColeEngine.md  ColeEngine_TODO.md  How-to-use-doxygen.md  HowToUseDoxygen.md  MacSetup.md  Note-dump.md  README - v2.md  TODO&Backlog.md  Tilemapping.md  WinSetup - Visual Studio.md
docs/.obsidian/: graph.json  workspace.json
docs/AI/: Enviromental.md
docs/Documentation/: Enemy AI.md  EntityComponents.md  Tilemapping.md
docs/EntityComponents/: PlayerController.md
docs/Research/: Animations.md  Entity-Component-System.md  Keyboard-input.md
docs/setup/: MacSetup-CLion.md  WinSetup-VisualStudio.md
src/: Animation.h  AssetManager.cpp  AssetManager.h  Circle.h  Collision.cpp  Collision.h  ECS.cpp  ECS.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp  main.h
src/ECS/: AbsColliderComponent.h  Animation.h  CircleColliderComponent.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  FSMComponent.h  HealthComponent.h  KeyboardController.h  LabelComponent.h  PositionComponent.h  ProjectileComponent.h  RectangleColliderComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UILabel.h
src/ECS/EntityControllers/: Controllers.h  FSMs.h  PlayerController.h  WormController.h  WormFSM.h
src/ECS/FSM/: FSMs.h  WormFSM.h
src/FSM/: FSMs.h  WormFSM.h
